Fixed the code input field being slightly wider than the page on small-width screens, fixed the width of this resizable element and added a minimal height

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,6 +100,10 @@ math {
 
 #codeInput {
     width: 100%;
+    border: 0;
+    padding: 0;
+    resize: vertical;
+    min-height:200px;
 }
 
 #generate-button {
